--- a/index.html
+++ b/index.html
@@ -18,40 +18,66 @@
 
       <form>
         <label>
-          Threshold
+          Threshold: <span class="val"></span>
 
           <input
             type="range"
             min="0"
             max="1"
             step="0.01"
-            value="0.9"
+            value="0.24"
             data-controls="threshold"
           />
         </label>
 
         <label>
-          Concavity
+          Concavity: <span class="val"></span>
 
           <input
             type="range"
             min="1"
             max="50"
-            value="40"
+            value="10"
             data-controls="concavity"
           />
         </label>
 
         <label>
-          Resolution
+          Noise Zoom: <span class="val"></span>
 
           <input
             type="range"
             min="1"
-            max="20"
-            value="1"
+            max="300"
+            value="180"
+            step="5"
             data-controls="resolution"
             data-should-regenerate=true
+          />
+        </label>
+
+        <label>
+          Vignette: <span class="val"></span>
+
+          <input
+            type="range"
+            min="0"
+            max="1000"
+            value="850"
+            data-controls="vignette"
+            data-should-regenerate=true
+          />
+        </label>
+
+        <label>
+          Simplify: <span class="val"></span>
+
+          <input
+            type="range"
+            min="0"
+            max="10"
+            value="10"
+            data-controls="simplify"
           />
         </label>
 
@@ -89,9 +115,9 @@
       <h2>Notes</h2>
 
       <ul>
-        <li>
-          Rectilinear mode will probably cause intersections
-        </li>
+        <li>Rectilinear mode will probably cause intersections</li>
+        <li>Simplification will maybe cause intersectionso</li>
+        <li>Best to decrease threshold as you increase the noise zoom</li>
       </ul>
     </div>
 
