--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <body>
     <h1>
-      Random Non-intersecting* Polygon Generator
+      Random Non-Intersecting* Polygon Generator
     </h1>
 
     <p>
