--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
         <li>Simplification will maybe cause intersectionso</li>
         <li>Best to decrease threshold as you increase the noise zoom</li>
       </ul>
+
+      <p>
+        by <a href="https://samjbrenner.com">sam brenner</a> / <a href="https://github.com/sambrenner/random-nonintersecting-polygons">view source</a>
+      </p>
     </div>
 
     <script src="index.js"></script>
