--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
       <ul>
         <li>Rectilinear mode will probably cause intersections</li>
-        <li>Simplification will maybe cause intersectionso</li>
+        <li>Simplification will maybe cause intersections</li>
         <li>Best to decrease threshold as you increase the noise zoom</li>
       </ul>
 
